--- a/assets/styles/scss/base/_b-sectioning.scss
+++ b/assets/styles/scss/base/_b-sectioning.scss
@@ -44,7 +44,7 @@ section {
     margin-bottom: $buffer--s;
 
     @include breakpoint(l) {
-      margin-bottom: $buffer--l - $buffer--s;
+      margin-bottom: $buffer--l;
     }
   }
 
