--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -164,119 +164,64 @@
 /* -------------------------------------------------------------------------- *\
 // *  <<--------------------<< ICON >>-------------------->>
 \* -------------------------------------------------------------------------- */
-.fas,
+[data-prefix='fas'],
+[data-prefix='fab'] {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  overflow: visible;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+
 [data-prefix='fas'] {
   width: 1rem;
   height: 1rem;
   margin-right: 0.5rem;
   font-size: 1rem;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  overflow: visible;
-  -ms-flex-item-align: center;
-      align-self: center;
 }
 
-.item-icon {
+.icon {
   color: var(--color-tertiary);
 }
 
-.item-icon--btn {
+.icon--btn {
   color: var(--color-primary);
 }
 
-.item-icon--btn:hover {
+.icon--btn:hover {
   color: var(--color-text);
 }
 
-.fab,
 [data-prefix='fab'] {
   width: 2.44141rem;
   height: 2.44141rem;
   font-size: 2.44141rem;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  overflow: visible;
-  -ms-flex-item-align: center;
-      align-self: center;
-  color: var(--color-secondary);
 }
 
-.fa-facebook:hover {
+[data-prefix='fab'] path,
+[data-prefix='fab'] circle {
+  fill: var(--color-secondary--light);
+}
+
+[data-prefix='fab']:hover {
   -webkit-transform: translate3d(0, -0.25rem, 0);
           transform: translate3d(0, -0.25rem, 0);
 }
 
-.fa-facebook:hover path {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: #1877f2;
-  -webkit-filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-          filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
+[data-prefix='fab']:hover path,
+[data-prefix='fab']:hover circle {
+  fill: var(--color-secondary--lightest);
+  -webkit-filter: drop-shadow(0 0 1rem var(--color-secondary--lightest));
+          filter: drop-shadow(0 0 1rem var(--color-secondary--lightest));
 }
 
-.fa-twitter:hover {
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
+[data-prefix='fab']::before {
+  content: normal;
 }
 
-.fa-twitter:hover path {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: #1da1f2;
-  -webkit-filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-          filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
-}
-
-.fa-instagram:hover {
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
-}
-
-.fa-instagram:hover path {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: #e4405f;
-  -webkit-filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-          filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
-}
-
-.fa-pinterest:hover {
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
-}
-
-.fa-pinterest:hover path {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: #bd081c;
-  -webkit-filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-          filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
-}
-
-.fa-youtube:hover {
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
-}
-
-.fa-youtube:hover path {
-  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  color: #f00;
-  -webkit-filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-          filter: drop-shadow(0.35rem 0.35rem 0.4rem rgba(var(--color-text), 0.5));
-  -webkit-transform: translate3d(0, -0.25rem, 0);
-          transform: translate3d(0, -0.25rem, 0);
+[data-prefix='fab']::after {
+  content: normal;
 }
 
 /* -------------------------------------------------------------------------- *\
@@ -352,7 +297,6 @@ nav {
   width: 100%;
   padding: 0.5rem;
   overflow: hidden;
-  border-radius: 8px;
 }
 
 article {
@@ -373,7 +317,7 @@ section {
 }
 
 section > h2 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 1600px) {
@@ -386,7 +330,6 @@ section > div {
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0.5rem;
 }
 
 aside {
@@ -412,6 +355,8 @@ header {
   width: 100vw;
   margin-right: -50vw;
   margin-left: -50vw;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background-color: var(--color-primary);
 }
 
@@ -425,7 +370,6 @@ header > div {
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0.5rem;
 }
 
 footer {
@@ -450,7 +394,6 @@ footer > div {
   width: 100%;
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0.5rem;
 }
 
 main {
@@ -997,21 +940,16 @@ a {
   text-decoration: none;
 }
 
-a svg {
-  -webkit-transition: color 0.35s ease;
-  transition: color 0.35s ease;
-}
-
 a:hover {
   color: var(--color-tertiary--lighter);
-  -webkit-transition: color 0.35s ease;
-  transition: color 0.35s ease;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
 }
 
 a:hover path {
   color: var(--color-tertiary--lighter);
-  -webkit-transition: color 0.35s ease;
-  transition: color 0.35s ease;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
 }
 
 a::before {
@@ -1051,6 +989,14 @@ a:hover::after {
   background: transparent;
   -webkit-transition: all 0s ease;
   transition: all 0s ease;
+}
+
+a > [data-prefix='fab']::before {
+  content: normal;
+}
+
+a > [data-prefix='fab']::after {
+  content: normal;
 }
 
 abbr {
@@ -1220,17 +1166,20 @@ video {
 \* -------------------------------------------------------------------------- */
 svg {
   width: 100%;
-  color: var(--color-primary);
-  fill: var(--color-primary);
+  color: var(--color-tertiary);
+  fill: var(--color-tertiary);
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: center center;
      object-position: center center;
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
 }
 
-svg path {
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
+svg path,
+svg circle {
+  -webkit-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
 }
 
 math {
