--- a/assets/styles/scss/imports/_partials.scss
+++ b/assets/styles/scss/imports/_partials.scss
@@ -11,6 +11,12 @@
   }
 }
 
+.formulate-container {
+  display: flex;
+  width: 100vw;
+  align-items: center;
+}
+
 .admin-btn {
   width: 40px;
   height: 40px;
