--- a/assets/styles/scss/imports/_variables.scss
+++ b/assets/styles/scss/imports/_variables.scss
@@ -48,7 +48,7 @@ $formulate-dark: #000000;
 
 $formulate-blue-l: #f3f4f4;
 
-$formulate-green: goldenrod;
+$formulate-green: $accent-color;
 $formulate-green-l: #64c89b;
 
 $formulate-error: #960505;
@@ -72,7 +72,7 @@ $formulate-white: #ffffff;
   font-family: $formulate-font-stack;
   padding: 0.75em;
   display: block;
-  width: 100%;
+  width: 80%;
   font-weight: 400;
   line-height: 1.2em;
   margin: 0;
