--- a/assets/styles/scss/imports/_reboot.scss
+++ b/assets/styles/scss/imports/_reboot.scss
@@ -21,6 +21,7 @@ body {
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   font-size: 1rem;
   font-weight: 400;
+  min-height: 100vh;
   line-height: 1.5;
   color: #212529;
   background-color: #fff;
