--- a/assets/styles/scss/imports/_variables.scss
+++ b/assets/styles/scss/imports/_variables.scss
@@ -96,3 +96,9 @@ $formulate-white: #ffffff;
   border-top-color: $formulate-gray-d;
   border-bottom-width: 0;
 }
+
+// Box-shadow
+
+$box-shadow: 0 5px 1.7px rgb(0 0 0 / 1%), 0 5.5px 2.4px rgb(0 0 0 / 2%),
+  0 8.2px 3.6px rgb(0 0 0 / 3%), 0 1.8px 3.6px rgb(0 0 0 / 4%),
+  0 1.2px 4.4px rgb(0 0 0 / 4%), 0 7px 8px rgb(0 0 0 / 6%);
