--- a/assets/styles/scss/imports/_form.scss
+++ b/assets/styles/scss/imports/_form.scss
@@ -2,6 +2,7 @@
 // -----------------------------------------------------------------------------
 
 .formulate-input {
+  width: 70%;
   // global wrapper styles
 
   .formulate-input-label {
